--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,9 +13,16 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }
+anyhow = "1.0.69"
+chrono = { version = "0.4.23", features = ["serde"] }
+rexiv2 = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlx = { version = "0.6.2", features = ["sqlite", "macros", "runtime-tokio-native-tls", "uuid", "chrono"] }
+tauri = { version = "1.2", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }
+thiserror = "1.0.39"
+tokio = { version = "1.26.0", features = ["full"] }
+uuid = { version = "1.3.0", features = ["serde"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
