--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,9 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
+glob = "0.3.1"
+globwalk = "0.8.1"
+num = "0.4.0"
 rexiv2 = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
