--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,13 +15,15 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 anyhow = "1.0.69"
 chrono = { version = "0.4.23", features = ["serde"] }
+futures = "0.3.27"
 glob = "0.3.1"
 globwalk = "0.8.1"
 num = "0.4.0"
 rexiv2 = "0.10.0"
+sea-orm = { version = "0.11.1", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
+sea-orm-migration = { version = "0.11.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.6.2", features = ["sqlite", "macros", "runtime-tokio-native-tls", "uuid", "chrono"] }
 tauri = { version = "1.2", features = ["dialog-open", "fs-read-dir", "fs-read-file", "path-all", "shell-open"] }
 thiserror = "1.0.39"
 tokio = { version = "1.26.0", features = ["full"] }
