--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@fontsource/open-sans": "4.5.14",
+    "@tanstack/react-query": "4.28.0",
     "@tauri-apps/api": "1.2.0",
+    "classnames": "^2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "17.4.0",
     "sharp": "0.31.3",
     "tslib": "2.5.0"
   },
